[package]
name = "core"
version = "0.1.0"
authors = ["Ty Riviere <tyriviere.dev@gmail.com>", "Paul Butler <paulgb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
console_error_panic_hook = "0.1.6"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
